--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
   <title>Rock Paper Scissors</title>
 </head>
 <body>
+  <button id="rock">Rock </button>
+  <button id="paper">Paper </button>
+  <button id="scissors">Scissors </button>
   <script src="script.js"></script>
+
+  <!-- Zone d'affichage des résultats -->
+  <div id="results">
+    <p id="round-result"></p>
+    <p id="score">Score: You 0 - Computer 0</p>
+    <p id="winner"></p>
+  </div>
 </body>
 </html>
